<resources>
    <string name="app_name">Clean Aberdeen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--WELCOME FRAGMENT -->

    <string name="btnStart">Start</string>
    <string name="tvWelcome">Clean Aberdeen</string>
    <string name="tvWelcomeText">Discover the hero within.</string>

    <!--ACTION TRIGGER FRAGMENT VIEWS -->

    <string name="btnAddPollutedSpot">Report Pollution</string>
    <string name="btnMarkAsClean">Mark as Clean</string>

    <!--POLLUTION DETAILS FRAGMENT VIEWS -->

    <string name="tvLabelPhotoAddition">1. Take a picture of the polluted area.</string>
    <string name="btnAddPhoto">Take photo</string>
    <string name="tvLabelDescription">2. Add in some details about the waste<br> type and quantity .</br></string>
    <string name="etMultilineDescription">e.g plastic, plentiful</string>
    <string name="tvLabelLocationAddition">3. Press Allow to use your current location to set polluted area.</string>
    <string name="btnAddPollutionLocation">Allow</string>
    <string name="btnSetLocation">Set Location</string>

    <!--SET CURRENT LOCATION FRAGMENT VIEWS -->

    <string name="tvYouAreHere">You are here:</string>
    <string name="btnSubmitForm">Submit</string>

    <!--SUCCESSFUL USER ACTION FRAGMENT -->

    <string name="tvCongratulations">Congratulations!</string>
    <string name="tvSubmissionSuccess">Your form has been successfully submitted.</string>
    <string name="tvUserSuccessAction">You are the hero Aberdeen deserves.</string>
    <string name="btnTakeMeHome">Home</string>


    <!--VIEW POLLUTED SPOT FRAGMENT -->

    <string name="tvWasteDescription">Mixed garbage, medium amount.</string>

    <!--CAMERA FRAGMENTS PLACEHOLDER BUTTONS-->
    <string name="btnPlaceholderCameras">Tap</string>

</resources>