<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#bbd4ce"
    tools:context=".SuccessfulFragment">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="412dp"
        android:layout_height="390dp"
        android:layout_marginTop="360dp"
        android:src="@drawable/waveturqoise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="265dp"
        android:layout_height="243dp"
        android:layout_marginTop="428dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/planet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvUserSuccessAction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="240dp"
        android:layout_marginRight="50dp"
        android:fontFamily="@font/amiko"
        android:letterSpacing=".1"
        android:paddingLeft="50dp"
        android:text="@string/tvUserSuccessAction"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCongratulations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="80dp"
        android:fontFamily="@font/amiko"
        android:text="@string/tvCongratulations"
        android:textColor="#383F3D"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSubmissionSuccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="120dp"
        android:fontFamily="@font/antic"
        android:text="@string/tvSubmissionSuccess"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCongratulations" />

    <Button
        android:id="@+id/btnTakeMeHome"
        android:layout_width="57dp"
        android:layout_height="56dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="#FFD761"
        android:cursorVisible="false"
        android:fadingEdge="horizontal"
        android:fontFamily="@font/raleway_semibold"
        android:textColor="#383F3D"
        app:cornerRadius="10dp"
        app:icon="@drawable/home"
        app:iconPadding="2dp"
        app:iconSize="25dp"
        app:iconTintMode="multiply"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>